--- a/src/components/HeaderCT/styles.css
+++ b/src/components/HeaderCT/styles.css
@@ -7,9 +7,12 @@ header {
   
   .nav-main {
     color: var(--color-font-primary);
-    font-size: 20px;
     padding: 20px;
     display: flex;
     text-align: center;
     justify-content: center;
+  }
+
+.nav-main h1 {
+    font-size: 20px;
   }
