--- a/src/components/CardCatalog/styles.css
+++ b/src/components/CardCatalog/styles.css
@@ -4,6 +4,8 @@
     border: 1px solid var(--color-border-primary);
     padding: 10px;
     border-radius: 10px;
+    align-items: center;
+    text-align: center;
 }
 
 .card-catalog-ct img {
@@ -13,4 +15,15 @@
 
 .card-catalog-ct h3 {
     font-size: 16px;
+}
+
+@media (min-width: 1200px) {
+    .card-catalog-ct img {
+        width: 391px;
+        height: 292px;
+    }
+
+    .card-catalog-ct h3 {
+        font-size: 20px;
+    }
 }
