--- a/src/components/HeaderCT/styles.css
+++ b/src/components/HeaderCT/styles.css
@@ -1,18 +1,24 @@
 header {
-    background-color: var(--color-bg-primary);
-    height: 70px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .nav-main {
-    color: var(--color-font-primary);
-    padding: 20px;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-  }
+  background-color: var(--color-bg-primary);
+  height: 70px;
+  display: flex;
+  align-items: center;
+}
+
+.nav-main {
+  color: var(--color-font-primary);
+  padding: 20px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
 
 .nav-main h1 {
-    font-size: 20px;
+  font-size: 20px;
+}
+
+@media (min-width: 1200px) {
+  .nav-main h1 {
+    font-size: 24px;
   }
+}
