--- a/src/index.css
+++ b/src/index.css
@@ -33,9 +33,9 @@ a, a:hover {
   padding: 20px;
 }
 
-.contanier-secundary {
+.container-secundary {
   width:  100%;
-  margin: 0 auto;
-  padding: 20px;
   max-width: 960px;
+  margin: auto;
+  padding: 20px;
 }
