--- a/src/routes/catalog/styles.css
+++ b/src/routes/catalog/styles.css
@@ -2,7 +2,6 @@
     background-color: var(--color-bg-quaternary);
     color: var(--color-font-secundary);
     padding-top: 25px;
-    font-size: 20px;
     align-items: center;
     text-align: center;
     justify-content: center;
@@ -15,13 +14,21 @@
 
 #section-description-content{
     background-color: var(--color-bg-tertiary);
-    align-items: center;
     text-align: center;
-    justify-content: center;
     color: var(--color-font-secundary);
 }
 
 #section-description-content h2 {
-    margin: 25px 0;
+    padding: 25px 0;
     font-size: 20px;
+}
+
+@media (min-width: 1200px) {
+    #section-catalog-content h2 {
+        font-size: 32px;
+    }
+
+    #section-description-content h2 {
+        font-size: 32px;
+    }
 }
